<resources>
    <string name="app_name">Brain Trainer</string>
    <string name="go">GO!</string>
    <string name="timerText">30s</string>
    <string name="scoreText">0/0</string>
    <string name="sumText">31 + 7</string>
    <string name="numberButton">14</string>
    <string name="button0">14</string>
    <string name="button1">14</string>
    <string name="button2">14</string>
    <string name="button3">14</string>
    <string name="resultText">Correct</string>
</resources>